# AirType

./: .gitignore  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: build-macos.yml  build.yml
scripts/: install.ps1  install.sh  setup.sh
src/: app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: indicator.html  lib.rs  main.rs
src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs
src-tauri/src/hotkeys/: keyboard.rs  manager.rs  mod.rs
src-tauri/src/injection/: keyboard.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/settings/: mod.rs  store.rs
src-tauri/src/transcription/: huggingface.rs  mod.rs  openai_batch.rs  openai_realtime.rs  runpod.rs  test_audio.rs  whisper.rs
src/lib/components/: Settings.svelte.bak  SettingsPanel.svelte  StatusIndicator.svelte
src/lib/stores/: app.js
src/routes/: +page.svelte
src/routes/indicator/: +page.svelte
