[package]
name = "airtype"
version = "0.1.0"
description = "AirType - Voice to Text Desktop App"
authors = ["MatanelP"]
edition = "2021"

[lib]
name = "airtype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.1", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"

# Speech-to-text (whisper.cpp bindings)
whisper-rs = "0.15"

# Text injection
enigo = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"

# WebSocket for OpenAI Realtime API
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP types (used by tokio-tungstenite for request building)
http = "1"

# Base64 encoding for audio data
base64 = "0.22"

# Clipboard access for fast text injection
arboard = "3"

# Error handling
anyhow = "1"
thiserror = "1"

# Synchronization
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Directories for config/data storage
dirs = "5"

# Low-level keyboard event listening (for modifier-only hotkeys)
rdev = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
# Secure secret storage on Linux
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Secure secret storage on macOS
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Secure secret storage on Windows
keyring = { version = "3", features = ["windows-native"] }

# URL encoding for data URLs
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
